# bandcamp-mcp

./: .gitignore  CLAUDE.md  ENDPOINTS.md  README.md  pyproject.toml  render.yaml  requirements.txt
src/: __init__.py  bandcamp_client.py  server_remote.py
